--- a/aula-1/exercicios/ex003/index.html
+++ b/aula-1/exercicios/ex003/index.html
@@ -21,7 +21,7 @@
         var n1 = Number.parseInt(window.prompt('Digite um número'))
         //Caso não seja preciso diferenciar entre Int e Float, podemos colocar apenas Number()
         var n2 = Number(window.prompt('Digite outro número'))
-        var n3 = n1 + (n2)
+        var n3 = n1 + n2
         //Para converter de number para string utilizamos String(var) ou var.toString()
         window.alert('A soma destes números é: ' + String(n3))//Forma de incorporar uma váriavel
         window.alert(`A soma dos números digitados é ${n3.toString()}`)//Outra forma de incorporar uma váriavel usando concatenação
