--- a/exercicios/ex002/index.html
+++ b/exercicios/ex002/index.html
@@ -21,7 +21,7 @@
                 <input type="radio" name="sexo" id="imasc">
                 <label for="imasc">Masculino</label>
                 <input type="radio" name="sexo" id="ifem">
-                <label for="imasc">Feminino</label>
+                <label for="ifem">Feminino</label>
             </p>
             <p>
                 <input type="button" value="Verificar" onclick="verificar()">
@@ -29,6 +29,7 @@
         </div>
         <div id="resultado">
             <p>Preencha os dados para verificar!</p>
+            <img id="foto" src="imagens/bebe-F.jpg" alt="">
         </div>
     </main>
     <footer>
