--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -11,6 +11,7 @@
         <h1>Vamos contar</h1>
     </header>
     <main>
+    <form action="post">
         <p>
             <label for="iinicio">Início:</label>
             <input type="number" name="inicio" id="iinicio">
@@ -26,8 +27,10 @@
             <input type="number" name="passo" id="ipasso">
         </p>
 
-        <p><input type="button" value="Contar" onclick="contar()"></p>
-
+        <p><input type="button" value="Contar" onclick="contar()">
+            <input type="reset" value="Limpar" onclick="limpar()">
+        </p>
+    </form>
         <div id="resultado">
             Peparando a contagem...
         </div>
